c4prj2_input/grade.txt
Grading at Sat Aug  3 00:41:40 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:14:23: error: expected expression before ‘[’ token
            char num = [strlen(str)];
                       ^
input.c:17:18: error: subscripted value is neither array nor pointer nor vector
               num[j]=str[i];
                  ^
input.c:21:15: error: subscripted value is neither array nor pointer nor vector
            num[j]='\0';
               ^
input.c:22:36: error: passing argument 1 of ‘atoi’ makes pointer from integer without a cast [-Werror=int-conversion]
            add_future_card(fc,atoi(num),add_empty_card(tmp)) ;
                                    ^
In file included from deck.h:3:0,
                 from input.h:4,
                 from input.c:2:
/usr/include/stdlib.h:147:12: note: expected ‘const char *’ but argument is of type ‘char’
 extern int atoi (const char *__nptr)
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
